tests/golden/3-basic-and-simple-literals/invalid/common/bad-explicit-null-literal-4.yini
^ ExplicitNulls
val1 = nothing
